[gd_scene load_steps=33 format=3 uid="uid://51moj080ncrk"]

[ext_resource type="Script" path="res://enemies/boss/boss.gd" id="1_3q0le"]
[ext_resource type="Texture2D" uid="uid://eorix3vx66le" path="res://assets/enemies/boss/boss.png" id="1_dcalj"]
[ext_resource type="Texture2D" uid="uid://cakdfwq0pqjhy" path="res://assets/explosion/enemy-deadth.png" id="3_7gplq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5116y"]
atlas = ExtResource("3_7gplq")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3nmv"]
atlas = ExtResource("3_7gplq")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ji4d"]
atlas = ExtResource("3_7gplq")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g5on"]
atlas = ExtResource("3_7gplq")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuk11"]
atlas = ExtResource("3_7gplq")
region = Rect2(200, 0, 40, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_6yxx4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5116y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3nmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ji4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g5on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuk11")
}],
"loop": false,
"name": &"boss_exploded",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybhff"]
size = Vector2(20, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4kpku"]
size = Vector2(16, 463)

[sub_resource type="Animation" id="Animation_6groy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5g8hd"]
resource_name = "arrive"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.2, 0.2), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l43si"]
resource_name = "attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-200, 0), Vector2(0, -150), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_yuxr7"]
resource_name = "hit"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.796078, 0, 0.780392, 1), Color(1, 1, 1, 1), Color(0.796078, 0, 0.780392, 1), Color(1, 1, 1, 1), Color(0.796078, 0, 0.780392, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_invincible"
}]
}

[sub_resource type="Animation" id="Animation_rsx40"]
resource_name = "initial_position"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fa7ht"]
resource_name = "pulse"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -150), Vector2(0, 0), Vector2(0, -150), Vector2(0, 0), Vector2(0, -150), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i2m4g"]
_data = {
"RESET": SubResource("Animation_6groy"),
"arrive": SubResource("Animation_5g8hd"),
"attack": SubResource("Animation_l43si"),
"hit": SubResource("Animation_yuxr7"),
"initial_position": SubResource("Animation_rsx40"),
"pulse": SubResource("Animation_fa7ht")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6ftqb"]
animation = &"arrive"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_klfnh"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6kesl"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p3f2t"]
animation = &"initial_position"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aoke3"]
animation = &"pulse"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wex3h"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4qi0d"]
switch_mode = 2
advance_mode = 2
advance_condition = &"on_trigger"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3txdc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u5jeq"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wnlkc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w5djb"]
advance_mode = 2
advance_condition = &"on_hit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s3q38"]
advance_mode = 2
advance_condition = &"on_hit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jcw8j"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_tifca"]
states/Start/position = Vector2(78, 100)
states/arrive/node = SubResource("AnimationNodeAnimation_6ftqb")
states/arrive/position = Vector2(465, 147)
states/attack/node = SubResource("AnimationNodeAnimation_klfnh")
states/attack/position = Vector2(763, 98)
states/hit/node = SubResource("AnimationNodeAnimation_6kesl")
states/hit/position = Vector2(679, 246)
states/initial_position/node = SubResource("AnimationNodeAnimation_p3f2t")
states/initial_position/position = Vector2(294, 147)
states/pulse/node = SubResource("AnimationNodeAnimation_aoke3")
states/pulse/position = Vector2(614, 98)
transitions = ["Start", "initial_position", SubResource("AnimationNodeStateMachineTransition_wex3h"), "initial_position", "arrive", SubResource("AnimationNodeStateMachineTransition_4qi0d"), "arrive", "pulse", SubResource("AnimationNodeStateMachineTransition_3txdc"), "pulse", "attack", SubResource("AnimationNodeStateMachineTransition_u5jeq"), "attack", "pulse", SubResource("AnimationNodeStateMachineTransition_wnlkc"), "pulse", "hit", SubResource("AnimationNodeStateMachineTransition_w5djb"), "attack", "hit", SubResource("AnimationNodeStateMachineTransition_s3q38"), "hit", "pulse", SubResource("AnimationNodeStateMachineTransition_jcw8j")]

[node name="Boss" type="Node2D"]
script = ExtResource("1_3q0le")
points = 50

[node name="Visual" type="Node2D" parent="."]

[node name="BossExploded" type="AnimatedSprite2D" parent="Visual"]
visible = false
z_index = 1
position = Vector2(0, -30)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6yxx4")
animation = &"boss_exploded"

[node name="Sprite2D" type="Sprite2D" parent="Visual"]
position = Vector2(0, -35)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_dcalj")

[node name="HitBox" type="Area2D" parent="Visual"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visual/HitBox"]
position = Vector2(0, -35.5)
shape = SubResource("RectangleShape2D_ybhff")

[node name="Trigger" type="Area2D" parent="."]
position = Vector2(-100, -1)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2(-2, -221.5)
shape = SubResource("RectangleShape2D_4kpku")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i2m4g")
}
autoplay = "arrive"

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i2m4g")
}
tree_root = SubResource("AnimationNodeStateMachine_tifca")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/on_hit = false
parameters/conditions/on_trigger = false

[node name="BossHit" type="AudioStreamPlayer2D" parent="."]

[node name="BossArrival" type="AudioStreamPlayer2D" parent="."]

[node name="BossDeath" type="AudioStreamPlayer2D" parent="."]

[connection signal="animation_finished" from="Visual/BossExploded" to="." method="_on_boss_exploded_animation_finished"]
[connection signal="area_entered" from="Visual/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="Trigger" to="." method="_on_trigger_area_entered"]
